# ibmi-mcp-server

./: .gitignore  AGENTS.md  DEVELOPER.md  README.md  RELEASING.md  package-lock.json  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  general-feature-request.md  sql-tool-request.md  sql-tool-request.yml
.github/workflows/: publish.yml
agents/frameworks/google_adk/: .env.example  README.md  main.py  pyproject.toml  test_agents.py
agents/frameworks/google_adk/adk_agents/: README.md  agent.py
agents/frameworks/google_adk/adk_agents/sub_agents/: performance_agent.py  security_agent.py  sysadmin_browse.py  sysadmin_discover.py  sysadmin_search.py
agents/frameworks/google_adk/adk_agents/utils/: prompts.py  tools.py  utils.py
agents/frameworks/google_adk/src/ibmi_agents/agents/: __init__.py  ibmi_agents.py  instructions.py
apps/mcpgateway/: docker-compose.yml
client/: .env.example  README.md  agent.py  agent_stdio.py  list_tool_annotations.py  list_toolset_resources.py  mcp_client.py  mcp_client_stdio.py  pyproject.toml  test_auth_agent.py  utils.py
deployment/openshift/apps/openshift/: README.md  kustomization.yaml
docs/: configuration.mdx  quickstart.mdx
server/: Dockerfile  package-lock.json  package.json
server/scripts/: release-finalize.sh  release-prepare.sh  release-undo.sh
server/src/: index.ts
server/src/config/: index.ts
server/src/ibmi-mcp-server/schemas/: config.ts
server/src/utils/formatting/: index.ts  markdownBuilder.ts  (+2 more)
server/tests/: setup.ts
tools/: README.md
(+16 files in other folders)
